<resources>
    <string name="app_name">Mood Menology</string>
    <string name="MoodTabName">Mood</string>
    <string name="ActionsTabName">Actions</string>
    <string name="LOG_TAG">MoodMenology</string>
    <string name="SaveButtonName">Save</string>
    <string name="DeleteButtonName">Delete</string>
    <string name="DeleteAllButtonName">Delete all data</string>
    <string name="PreviousDayText">&lt;</string>
    <string name="NextDayText">&gt;</string>
    <string name="FromColumnText">From:</string>
    <string name="ToColumnText">To:</string>
    <string name="crash_toast_text">App is crashed, sending report</string>
    <string name="sendAllDataButtonInProgress">Preparing data...</string>
    <string name="SendAllData">Download and send</string>
    <string name="timeToText">To: </string>
    <string name="timeSeparater">,</string>
    <string name="timeFromText">From:</string>
    <string name="hourShortText">h</string>
    <string name="minShortText">min</string>
    <string name="someDefaultText">defaultText</string>
    <string name="timeFromDefaultText">From: 00:00</string>
    <string name="timeToDefaultText">To: 00:00</string>
    <string name="dateHeaderDefaultText">00-00-0000</string>
    <string name="actionDurationDefaultText">1h 30min</string>
    <string name="actionStartTimeDefaultText">00:00</string>
    <string name="actionEndTimeDefaultText">23:59</string>
    <string name="moodStartTimeDefaultText">00:00</string>
    <string name="mainMenuSettingsText">Settings</string>
    <string name="mainMenuAboutText">About</string>
    <string name="app_version">Version 1.1 alpha</string>
    <string name="app_version_date">09.06.2018</string>
    <string name="icon_image_desc">icon_image_desc</string>
    <string name="mainMenuDownloadText">Download data</string>
</resources>
