<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ItemActionEvent_iconImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/group1action2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemActionEvent_startTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionStartTimeDefaultText" />

            <TextView
                android:id="@+id/ItemActionEvent_endTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionEndTimeDefaultText" />
        </LinearLayout>

        <TextView
            android:id="@+id/ItemActionEvent_durationText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/actionDurationDefaultText"
            android:textSize="30sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>