<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.macgavrina.moodmenology.views.ActivityEditAction">

    <ImageView
        android:id="@+id/ActivityEditAction_actionImage"
        android:layout_width="156dp"
        android:layout_height="136dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mood1" />

    <TextView
        android:id="@+id/ActivityEditAction_startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timeFromDefaultText"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/ActivityEditAction_timeImage"
        app:layout_constraintStart_toEndOf="@+id/ActivityEditAction_timeImage"
        app:layout_constraintTop_toBottomOf="@+id/ActivityEditAction_actionImage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/ActivityEditAction_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/SaveButtonName" />

        <Button
            android:id="@+id/ActivityEditAction_deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/DeleteButtonName" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ActivityEditAction_editStartTimeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ActivityEditAction_startTimeText"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/ActivityEditAction_timeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityEditAction_actionImage"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <TextView
        android:id="@+id/ActivityEditAction_endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timeToDefaultText"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ActivityEditAction_timeImage"
        app:layout_constraintTop_toBottomOf="@+id/ActivityEditAction_startTimeText"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/ActivityEditAction_editEndTimeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ActivityEditAction_endTimeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
